Fix stacked button alignment in the editor

--- a/src/blocks/button/editor.scss
+++ b/src/blocks/button/editor.scss
@@ -112,6 +112,8 @@
 		width: auto;
 		padding-left: 0;
 		padding-right: 0;
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	// 3. Remove margins on subsequent Edit container.
